--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ a:hover{
 .historia > h1{
     font-size: 35px;
     margin: 3% 0;
+    text-align: center;
 }
 .historia > h2{
     font-size: 25px;
